Correction in el-collapse

--- a/src/assets/components/_el-collapse.scss
+++ b/src/assets/components/_el-collapse.scss
@@ -1,15 +1,10 @@
 @import './_variables';
 
-.el-collapse{
-
+.el-collapse-item{
   border-top: 2px solid $lineColor1;
   &:last-child {
     border-bottom: 2px solid $lineColor1;
   }
-}
-
-.el-collapse-item{
- 
   &__header{
     font: normal normal 600 1.13rem/1.5rem $font-family; 
     padding-left:1rem;
